--- a/sass/layout/_modal.scss
+++ b/sass/layout/_modal.scss
@@ -198,4 +198,13 @@
       margin-left: 124px;
     }
   }
+  .person-icon {
+    top: 105px;
+  }
+  .tel-icon {
+    top: 175px;
+  }
+  .email-icon {
+    top: 240px;
+  }
 }
