--- a/css/main.css
+++ b/css/main.css
@@ -630,6 +630,15 @@ ul {
   .modal-form__submit {
     margin-left: 124px;
   }
+  .person-icon {
+    top: 105px;
+  }
+  .tel-icon {
+    top: 175px;
+  }
+  .email-icon {
+    top: 240px;
+  }
 }
 
 .navigation {
