--- a/sass/components/_links.scss
+++ b/sass/components/_links.scss
@@ -14,7 +14,7 @@
     font-size: 14px;
     line-height: 0.583;
     color: rgba(255, 255, 255, 0.6);
-    text-decoration: none;
+    letter-spacing: 0.03em;
     transition-property: color;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
