--- a/sass/layout/_modal.scss
+++ b/sass/layout/_modal.scss
@@ -197,6 +197,10 @@
     &__submit {
       margin-left: 124px;
     }
+    &__checkbox-label {
+      font-size: 14px;
+      line-height: 1.714;
+    }
   }
   .person-icon {
     top: 105px;
