--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -23,6 +23,20 @@
     padding-top: 118px;
     text-align: center;
   }
+  &--section {
+    flex-direction: column;
+  }
+  &--footer {
+    flex-direction: column;
+    padding-bottom: 60px;
+    width: auto;
+    flex-wrap: wrap;
+    flex-basis: calc(100% / 1);
+  }
+  &__portfolio {
+    align-items: flex-start;
+    justify-content: center;
+  }
 }
 
 @media screen and (min-width: 768px) {
@@ -34,43 +48,36 @@
       line-height: 1.167;
       color: #757575;
     }
+    &--footer {
+      flex-direction: row;
+      align-items: center;
+      flex-basis: calc(100% / 2);
+    }
+    &__portfolio {
+      align-items: center;
+      justify-content: center;
+    }
   }
 }
 @media screen and (min-width: 1200px) {
   .container {
-    // width: 1200px;
-    // display: flex;
-    // align-items: center;
-    // justify-content: space-between;
     flex-wrap: wrap;
     &--footer {
-      justify-content: flex-start;
-      padding-bottom: 60px;
+      flex-basis: calc(100% / 3);
+      justify-content: center;
     }
     &__links {
       font-size: 14px;
-      // font-weight: 500;
       line-height: 1.143;
-      // color: #757575;
       &--margin {
-        // margin-left: 345px;
         margin-right: 30px;
       }
     }
-    // &--header {
-    //   justify-content: flex-start;
-    //   background-color: var(--secondary-color);
-    // }
-    // &--main-section {
-    //   flex-direction: column;
-    //   align-content: center;
-    // }
+
     &__heading {
-      // color: var(--secondary-color);
       font-size: 44px;
       line-height: 1.364;
       padding-top: 200px;
-      // text-align: center;
     }
   }
 }
