--- a/sass/base/_section.scss
+++ b/sass/base/_section.scss
@@ -14,7 +14,7 @@
 }
 @media screen and (min-width: 1200px) {
   .section {
-    padding: 94px 0 0 0;
+    padding: 94px 0;
     justify-content: center;
   }
 }
