--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -9,46 +9,24 @@
   &__webstudio {
     color: var(--hover-color);
   }
+  &--footer {
+    color: var(--secondary-color);
+    padding: 60px 0 0 0;
+    margin-bottom: 20px;
+  }
 }
 @media screen and (min-width: 768px) {
   .logo {
-    font-family: var(--secondary-font);
-    font-size: 24px;
-    font-weight: 700;
-    line-height: 1.167;
-    color: #000000;
-    text-decoration: none;
     padding: 16px 0 16px 15px;
-    &__webstudio {
-      color: var(--hover-color);
+    &--footer {
+      padding: 60px 0 0 0;
     }
-    // &--footer {
-    //   color: var(--secondary-color);
-    //   padding-top: 0;
-    //   padding-bottom: 0;
-    //   margin-top: 60px;
-    //   margin-bottom: 25px;
-    // }
   }
 }
-
-// .logo {
-//   font-family: var(--secondary-font);
-//   font-size: 26px;
-//   font-weight: 700;
-//   line-height: 1.192;
-//   color: #000000;
-//   text-decoration: none;
-//   padding-top: 25px;
-//   padding-bottom: 25px;
-//   &__webstudio {
-//     color: var(--hover-color);
-//   }
-//   &--footer {
-//     color: var(--secondary-color);
-//     padding-top: 0;
-//     padding-bottom: 0;
-//     margin-top: 60px;
-//     margin-bottom: 25px;
-//   }
-// }
+@media screen and (min-width: 1200px) {
+  .logo {
+    &--footer {
+      padding: 60px 0 0 0;
+    }
+  }
+}
