--- a/sass/components/_portfolio-buttons.scss
+++ b/sass/components/_portfolio-buttons.scss
@@ -1,6 +1,14 @@
 .buttons {
-  margin-bottom: 34px;
+  margin-bottom: 40px;
+  list-style-type: none;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  flex-direction: row;
+  width: 392px;
   &__item {
+    width: 120px;
     font-size: 16px;
     font-family: inherit;
     font-weight: 500;
@@ -10,11 +18,15 @@
     text-align: center;
     border: none;
     border-radius: 4px;
-    padding: 6px 22px;
+    padding: 6px 0;
     margin-right: 8px;
+    margin-bottom: 15px;
     transition-property: color, background-color, box-shadow;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  &__grid {
+    flex-basis: calc(100% / 3);
   }
   &__item:hover {
     background-color: var(--hover-color);
@@ -22,4 +34,37 @@
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
       0px 2px 2px rgba(0, 0, 0, 0.12);
   }
+  .buttons__item--mobile {
+    margin-bottom: 0;
+  }
 }
+@media screen and (min-width: 768px) {
+  .buttons {
+    width: 645px;
+  }
+}
+// .buttons {
+//   margin-bottom: 34px;
+//   &__item {
+//     font-size: 16px;
+//     font-family: inherit;
+//     font-weight: 500;
+//     line-height: 1.625;
+//     letter-spacing: 0.03em;
+//     cursor: pointer;
+//     text-align: center;
+//     border: none;
+//     border-radius: 4px;
+//     padding: 6px 22px;
+//     margin-right: 8px;
+//     transition-property: color, background-color, box-shadow;
+//     transition-duration: 250ms;
+//     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+//   }
+//   &__item:hover {
+//     background-color: var(--hover-color);
+//     color: var(--secondary-color);
+//     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+//       0px 2px 2px rgba(0, 0, 0, 0.12);
+//   }
+// }
