--- a/sass/components/_portfolio-card.scss
+++ b/sass/components/_portfolio-card.scss
@@ -13,6 +13,9 @@
     padding-top: 4px;
   }
 }
+.portfolio-grid {
+  flex-basis: calc(100% / 1);
+}
 .portfolio-figure {
   background-color: var(--secondary-color);
   margin-block-start: 0em;
@@ -20,7 +23,7 @@
   margin-inline-start: 0em;
   margin-inline-end: 0em;
   margin-bottom: 30px;
-  margin-right: 30px;
+  // margin-right: 30px;
   border: 1px solid #eeeeee;
   transition-property: box-shadow;
   transition-duration: 250ms;
@@ -37,7 +40,7 @@
   }
 }
 .portfolio-img {
-  width: 370px;
+  width: 450px;
   height: 294px;
   overflow: hidden;
   position: relative;
@@ -58,3 +61,81 @@
     padding: 49px 45px 49px 25px;
   }
 }
+@media screen and (min-width: 768px) {
+  .portfolio-img,
+  .portfolio-figure {
+    width: 354px;
+  }
+  .portfolio-grid {
+    flex-basis: calc(100% / 2);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .portfolio-grid {
+    flex-basis: calc(100% / 3);
+  }
+  .portfolio-img,
+  .portfolio-figure {
+    width: 370px;
+  }
+}
+// .portfolio-figcaption-item {
+//   font-weight: 900;
+//   font-size: 18px;
+//   line-height: 2;
+//   color: inherit;
+//   letter-spacing: 0.06em;
+//   margin: 24px 24px 20px 20px;
+//   &__span {
+//     font-size: 16px;
+//     line-height: 1.875;
+//     color: #757575;
+//     letter-spacing: 0.03em;
+//     padding-top: 4px;
+//   }
+// }
+// .portfolio-figure {
+//   background-color: var(--secondary-color);
+//   margin-block-start: 0em;
+//   margin-block-end: 0em;
+//   margin-inline-start: 0em;
+//   margin-inline-end: 0em;
+//   margin-bottom: 30px;
+//   margin-right: 30px;
+//   border: 1px solid #eeeeee;
+//   transition-property: box-shadow;
+//   transition-duration: 250ms;
+//   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+//   &:hover {
+//     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+//       1px 4px 6px rgba(0, 0, 0, 0.16);
+//   }
+// }
+// .portfolio-figure:hover,
+// .portfolio-figure:focus {
+//   .portfolio-img__mask {
+//     transform: translate(0, 0);
+//   }
+// }
+// .portfolio-img {
+//   width: 370px;
+//   height: 294px;
+//   overflow: hidden;
+//   position: relative;
+//   &__mask {
+//     position: absolute;
+//     top: 0;
+//     left: 0;
+//     transform: translate(0, 100%);
+//     transition: transform 250ms linear;
+//     background-color: rgba(33, 150, 243, 0.9);
+//     width: 100%;
+//     height: 100%;
+//     font-size: 18px;
+//     line-height: 1.556;
+//     letter-spacing: 0.03em;
+//     color: var(--secondary-color);
+//     display: flex;
+//     padding: 49px 45px 49px 25px;
+//   }
+// }
