--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,13 +1,67 @@
+.footer {
+  background-color: var(--background-color);
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.footer-contact,
+.contact-column {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.address-footer {
+  font-style: normal;
+  line-height: 1.714;
+  text-align: center;
+  margin-bottom: 60px;
+}
+.join-for-us {
+  text-align: center;
+  color: var(--secondary-color);
+  font-size: 14px;
+  font-weight: 900;
+  line-height: 1.143;
+  text-transform: uppercase;
+  margin-bottom: 60px;
+}
+.address-span {
+  font-size: 14px;
+  line-height: 1.714;
+  color: var(--secondary-color);
+  text-align: center;
+  letter-spacing: 0.03em;
+}
+.newsletter {
+  font-weight: 900;
+  font-size: 14px;
+  line-height: 1.143;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--secondary-color);
+  text-align: center;
+}
+.footer {
+  .social-ellipse__icons {
+    fill: var(--secondary-color);
+  }
+}
+
 @media screen and (min-width: 320px) {
   .contact-column {
     display: none;
   }
 }
 @media screen and (min-width: 768px) {
-  .footer-contact,
   .contact-column {
     display: flex;
     flex-direction: column;
+  }
+
+  .join-for-us {
+    padding-top: 25px;
+    margin-left: 144px;
   }
 }
 
@@ -15,47 +69,26 @@
   .contact-column {
     flex-direction: row;
   }
+  .footer-contact {
+    align-items: flex-start;
+  }
+  .footer {
+    align-content: center;
+    align-items: center;
+    justify-content: center;
+  }
+  .address-footer {
+    text-align: left;
+    margin-bottom: 0;
+  }
+  .join-for-us {
+    text-align: left;
+    margin-left: 70px;
+    margin-right: 70px;
+    padding-top: 70px;
+  }
+  .newsletter {
+    padding-top: 30px;
+    text-align: left;
+  }
 }
-
-// .footer {
-//   background-color: var(--background-color);
-//   flex-direction: row;
-//   align-content: flex-start;
-//   align-items: flex-start;
-//   justify-content: flex-start;
-// }
-// .footer-contact,
-// .contact-column {
-//   display: flex;
-//   flex-direction: column;
-// }
-// .join-for-us {
-//   color: var(--secondary-color);
-//   font-size: 14px;
-//   font-weight: 900;
-//   line-height: 1.143;
-//   text-transform: uppercase;
-//   margin-left: 70px;
-//   margin-right: 78px;
-//   padding-top: 70px;
-//   padding-bottom: 40px;
-// }
-// .address-span {
-//   font-size: 14px;
-//   line-height: 1.714;
-//   color: var(--secondary-color);
-// }
-// .newsletter {
-//   font-weight: 900;
-//   font-size: 14px;
-//   line-height: 1.143;
-//   letter-spacing: 0.03em;
-//   text-transform: uppercase;
-//   color: var(--secondary-color);
-//   padding-top: 30px;
-// }
-// .footer {
-//   .social-ellipse__icons {
-//     fill: var(--secondary-color);
-//   }
-// }
