--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,6 +9,7 @@
 @import "./components/portfolio-card";
 @import "./components/logo";
 
+@import "./layout/modal-menu";
 @import "./layout/footer";
 @import "./layout/forms";
 @import "./layout/header";
