--- a/sass/layout/_about-us.scss
+++ b/sass/layout/_about-us.scss
@@ -10,7 +10,7 @@
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
   &__img {
-    width: inherit;
+    width: 450px;
   }
   &__item {
     font-weight: 500;
@@ -69,6 +69,9 @@
 @media screen and (min-width: 768px) {
   .team-photos {
     width: 354px;
+    &__img {
+      width: 354px;
+    }
   }
   .social-ellipse {
     margin-bottom: 30px;
@@ -82,6 +85,9 @@
 @media screen and (min-width: 1200px) {
   .team-photos {
     width: 270px;
+    &__img {
+      width: 270px;
+    }
     &__span {
       display: block;
       font-size: 16px;
