--- a/css/main.css
+++ b/css/main.css
@@ -660,6 +660,7 @@ ul {
   width: 30px;
   height: 30px;
   fill: var(--main-color);
+  stroke: rgba(0, 0, 0, 0.1);
   position: absolute;
   top: 8px;
   left: 412px;
