--- a/sass/layout/_modal.scss
+++ b/sass/layout/_modal.scss
@@ -31,7 +31,7 @@
   &__icon {
     width: 30px;
     height: 30px;
-    fill: var(--main-color);
+    // fill: var(--main-color);
     stroke: rgba(0, 0, 0, 0.1);
     position: absolute;
     top: 8px;
