--- a/css/main.css
+++ b/css/main.css
@@ -659,13 +659,10 @@ ul {
 .modal__icon {
   width: 30px;
   height: 30px;
-  stroke: rgba(0, 0, 0, 0.1);
+  fill: var(--secondary-color);
   position: absolute;
   top: 8px;
   left: 412px;
-  transition-property: fill;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal__heading {
@@ -677,6 +674,13 @@ ul {
   color: var(--main-color);
   padding: 40px 40px 0px 40px;
   margin-bottom: 12px;
+}
+
+.modal__icon--fill {
+  fill: var(--main-color);
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .is-hidden .modal {
@@ -793,7 +797,7 @@ ul {
 }
 
 .modal-form__submit:hover,
-.modal__icon:hover {
+.modal__icon--fill:hover {
   fill: var(--hover-color);
   cursor: pointer;
 }
