--- a/css/main.css
+++ b/css/main.css
@@ -403,7 +403,8 @@ ul {
   justify-content: flex-start;
   align-items: flex-start;
   align-content: flex-start;
-  width: 450px;
+  width: 100%;
+  height: 100%;
   padding-top: 62px;
 }
 
@@ -643,8 +644,8 @@ ul {
 
 .modal {
   position: absolute;
-  width: 450px;
-  min-height: 581px;
+  width: 100%;
+  height: 100%;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
@@ -659,10 +660,13 @@ ul {
 .modal__icon {
   width: 30px;
   height: 30px;
-  fill: var(--secondary-color);
+  fill: var(--main-color);
   position: absolute;
   top: 8px;
   left: 412px;
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal__heading {
@@ -674,13 +678,6 @@ ul {
   color: var(--main-color);
   padding: 40px 40px 0px 40px;
   margin-bottom: 12px;
-}
-
-.modal__icon--fill {
-  fill: var(--main-color);
-  transition-property: fill;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .is-hidden .modal {
@@ -797,7 +794,7 @@ ul {
 }
 
 .modal-form__submit:hover,
-.modal__icon--fill:hover {
+.modal__icon:hover {
   fill: var(--hover-color);
   cursor: pointer;
 }
