--- a/sass/layout/_modal-menu.scss
+++ b/sass/layout/_modal-menu.scss
@@ -5,7 +5,8 @@
   justify-content: flex-start;
   align-items: flex-start;
   align-content: flex-start;
-  width: 450px;
+  width: 100%;
+  height: 100%;
   padding-top: 62px;
   &__item {
     font-weight: 500;
