--- a/sass/layout/_modal.scss
+++ b/sass/layout/_modal.scss
@@ -16,8 +16,8 @@
 }
 .modal {
   position: absolute;
-  width: 450px;
-  min-height: 581px;
+  width: 100%;
+  height: 100%;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
@@ -31,11 +31,13 @@
   &__icon {
     width: 30px;
     height: 30px;
-    fill: var(--secondary-color);
-    // stroke: rgba(0, 0, 0, 0.1);
+    fill: var(--main-color);
     position: absolute;
     top: 8px;
     left: 412px;
+    transition-property: fill;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   }
   &__heading {
     font-weight: 900;
@@ -48,13 +50,12 @@
     margin-bottom: 12px;
   }
 }
-.modal__icon--fill {
-  fill: none;
-  color: var(--main-color);
-  transition-property: color;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
+// .modal__icon--fill {
+//   fill: var(--main-color);
+//   transition-property: fill;
+//   transition-duration: 250ms;
+//   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+// }
 .is-hidden {
   .modal {
     opacity: 0;
@@ -158,8 +159,8 @@
   color: var(--hover-color);
 }
 .modal-form__submit:hover,
-.modal__icon--fill:hover {
-  color: var(--hover-color);
+.modal__icon:hover {
+  fill: var(--hover-color);
   cursor: pointer;
 }
 .person-icon {
