--- a/sass/layout/_modal.scss
+++ b/sass/layout/_modal.scss
@@ -32,6 +32,8 @@
     width: 30px;
     height: 30px;
     fill: var(--main-color);
+    stroke-width: 1;
+    stroke: var(--secondary-color);
     position: absolute;
     top: 8px;
     left: 412px;
