--- a/css/main.css
+++ b/css/main.css
@@ -661,6 +661,8 @@ ul {
   width: 30px;
   height: 30px;
   fill: var(--main-color);
+  stroke-width: 1;
+  stroke: var(--secondary-color);
   position: absolute;
   top: 8px;
   left: 412px;
