--- a/sass/layout/_modal.scss
+++ b/sass/layout/_modal.scss
@@ -33,7 +33,7 @@
     height: 30px;
     fill: var(--main-color);
     stroke-width: 1;
-    stroke: var(--secondary-color);
+    stroke: var(--main-color);
     position: absolute;
     top: 8px;
     left: 412px;
