--- a/css/main.css
+++ b/css/main.css
@@ -662,7 +662,7 @@ ul {
   height: 30px;
   fill: var(--main-color);
   stroke-width: 1;
-  stroke: var(--secondary-color);
+  stroke: var(--main-color);
   position: absolute;
   top: 8px;
   left: 412px;
