--- a/css/main.css
+++ b/css/main.css
@@ -411,8 +411,8 @@ ul {
 .navigation-modal__item,
 .contact-modal__item {
   font-weight: 500;
-  font-size: 40px;
-  line-height: 1.175px;
+  font-size: 24px;
+  line-height: 1.175;
   letter-spacing: 0.02em;
   margin-bottom: 64px;
   padding-left: 40px;
@@ -424,9 +424,13 @@ ul {
 }
 
 .contact-modal__item {
-  font-size: 34px;
-  line-height: 1.176;
   color: #757575;
+}
+
+.contact-modal__item--modifier {
+  color: var(--hover-color);
+  font-size: 40px;
+  line-height: 1.167;
 }
 
 .social-links {
@@ -609,12 +613,12 @@ ul {
   justify-content: center;
 }
 
-.modal-menu {
+.modal-menu-icon {
   width: 40px;
   height: 40px;
 }
 
-.modal-menu:hover {
+.modal-menu-icon:hover {
   fill: var(--hover-color);
 }
 
@@ -642,10 +646,11 @@ ul {
   transition: opacity 250ms linear, visibility 250ms linear;
 }
 
-.modal {
-  position: absolute;
-  width: 100%;
-  height: 100%;
+.modal,
+.modal-menu {
+  position: fixed;
+  width: 450px;
+  min-height: 591px;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
@@ -657,7 +662,8 @@ ul {
   align-items: center;
 }
 
-.modal__icon {
+.modal__icon,
+.modal-menu__icon {
   width: 30px;
   height: 30px;
   fill: var(--main-color);
@@ -670,7 +676,8 @@ ul {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal__heading {
+.modal__heading,
+.modal-menu__heading {
   font-weight: 900;
   font-size: 20px;
   line-height: 1.15;
@@ -679,6 +686,11 @@ ul {
   color: var(--main-color);
   padding: 40px 40px 0px 40px;
   margin-bottom: 12px;
+}
+
+.modal-menu {
+  width: 100%;
+  height: 100%;
 }
 
 .is-hidden .modal {
@@ -839,6 +851,7 @@ ul {
 @media screen and (min-width: 1200px) {
   .modal {
     width: 528px;
+    min-height: 581px;
   }
   .modal__icon {
     left: 490px;
