--- a/sass/layout/_modal.scss
+++ b/sass/layout/_modal.scss
@@ -14,10 +14,11 @@
   pointer-events: none;
   transition: opacity 250ms linear, visibility 250ms linear;
 }
-.modal {
-  position: absolute;
-  width: 100%;
-  height: 100%;
+.modal,
+.modal-menu {
+  position: fixed;
+  width: 450px;
+  min-height: 591px;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
@@ -51,12 +52,10 @@
     margin-bottom: 12px;
   }
 }
-// .modal__icon--fill {
-//   fill: var(--main-color);
-//   transition-property: fill;
-//   transition-duration: 250ms;
-//   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-// }
+.modal-menu {
+  width: 100%;
+  height: 100%;
+}
 .is-hidden {
   .modal {
     opacity: 0;
@@ -200,6 +199,7 @@
 @media screen and (min-width: 1200px) {
   .modal {
     width: 528px;
+    min-height: 581px;
     &__icon {
       left: 490px;
     }
