--- a/css/main.css
+++ b/css/main.css
@@ -628,6 +628,12 @@ ul {
   }
 }
 
+@media screen and (min-width: 1200px) {
+  .modal-menu-icon {
+    display: none;
+  }
+}
+
 .backdrop {
   position: fixed;
   top: 0;
