--- a/sass/layout/_modal.scss
+++ b/sass/layout/_modal.scss
@@ -1,4 +1,5 @@
 .backdrop {
+  z-index: 4;
   position: fixed;
   top: 0;
   left: 0;
@@ -16,6 +17,7 @@
 }
 .modal,
 .modal-menu {
+  // z-index: 5;
   position: fixed;
   width: 450px;
   min-height: 591px;
@@ -53,8 +55,8 @@
   }
 }
 .modal-menu {
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
 }
 .is-hidden {
   .modal {
